--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   Нажмите, чтобы скачать или открыть презентацию:
   <a href="СетьВводный.pptx">Презентация в формате .pptx/<a>
    Нажмите, чтобы скачать или открыть index.html:
-   <a href-"index.html">Файл проверки работы с кириллицей .html/<a>   
+   <a href="index.html">Файл проверки работы с кириллицей .html/<a>   
    </p> 
     <h1><Привет мир/<h1>
 </body>
