--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -5,6 +5,8 @@
     <title>Заголовок страницы</title>
 </head>
 <body>
-    <p>Привет, мир!</p>
+    <p> Приближается один из любимых праздников в России — Новый год. Дома украшаются гирляндами и мишурой, на главной ёлке страны зажигаются огни, а в воздухе витает аромат мандаринов и предвкушения чуда. Этот праздник объединяет поколения: и дети, и взрослые с нетерпением ждут боя курантов, волшебства и исполнения заветных желаний.</p>
+    <p>В преддверии праздника многие любят проводить время за увлекательными головоломками. Например, русский кроссворд на новогоднюю тему может стать отличным способом вспомнить традиции, персонажей и символы зимнего праздника — от Деда Мороза до снеговика и оливье. Такие задания развивают внимание, словарный запас и дарят ощущение ностальгии по старым добрым временам.</p>
+    <p>Не менее популярен и английский кроссворд, особенно в семьях, где изучают иностранный язык. Он помогает закрепить лексику — snowflake, fireworks, gift, champagne — и превращает подготовку к празднику в увлекательное обучение. Вместе с кроссвордами, горячим какао и любимыми фильмами Новый год становится не просто датой в календаре, а настоящим праздником души.</p>
 </body>
 </html>
