--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
- <title>Мой блог</title>
- <link type=“text/css” rel=“stylesheet” href=“style.css” />
-</head> 
-<body> 
- <h2> дату сегодня , 2025</h2>
-<img src=“Icons/free-icon-christmas-decorations-2445049.png” alt=“Новый год”>
-Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
-<h2> 15 октября , 2025</h2>
-<p>
-Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
-</p>
-<h2> 1 сентября , 2025</h2>
-<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
-<p>
-Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
-</p>
-<p>Иконки: <a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от Victoruler - Flaticon </p>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой блог</title>
+    <link type="text/css" rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h2>3 декабря, 2025</h2>
+    <img src="Icons/free-icon-christmas-decorations-2445049.png" alt="Новогодние украшения">
+    <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь</a>.</p>
+
+    <h2>15 октября, 2025</h2>
+    <p>
+        Я сделала новогодние кроссворды для сайта 
+        <a href="http://адрес-сайта-друга" title="Блог моего друга">Сайт моего друга</a>.
+    </p>
+
+    <h2>1 сентября, 2025</h2>
+    <blockquote>Путешествие в тысячу миль начинается с одного шага. — Лао Цзы</blockquote>
+    <p>
+        Оставляю в прошлом скучную и неинтересную локальную файловую систему ради Всемирной паутины.
+    </p>
+
+    <p>
+        Иконки: 
+        <a href="https://www.flaticon.com/ru/free-icons/-" 
+           title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
+        от <a href="https://www.flaticon.com/authors/victoruler" 
+              title="Victoruler — Flaticon">Victoruler</a> — Flaticon
+    </p>
 </body>
-    </html>
+</html>
