--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Поздравление с Новым 2026 годом!</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Поздравление!</title>
+  <!-- Подключение стилей -->
+  <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>🎉 Поздравляем с Новым 2026 годом! 🎄</h1>
 
-    <p>Приближается один из любимых праздников в России — Новый год. Дома украшаются гирляндами и мишурой, на главной ёлке страны зажигаются огни, а в воздухе витает аромат мандаринов и предвкушения чуда. Этот праздник объединяет поколения: и дети, и взрослые с нетерпением ждут боя курантов, волшебства и исполнения заветных желаний.</p>
-    
-    <p>В преддверии праздника многие любят проводить время за увлекательными головоломками. Например, <strong>русский кроссворд</strong> на новогоднюю тему может стать отличным способом вспомнить традиции, персонажей и символы зимнего праздника — от Деда Мороза до снеговика и оливье. Такие задания развивают внимание, словарный запас и дарят ощущение ностальгии по старым добрым временам.</p>
-    
-    <p>Не менее популярен и <strong>английский кроссворд</strong>, особенно в семьях, где изучают иностранный язык. Он помогает закрепить лексику — <em>snowflake, fireworks, gift, champagne</em> — и превращает подготовку к празднику в увлекательное обучение. Вместе с кроссвордами, горячим какао и любимыми фильмами Новый год становится не просто датой в календаре, а настоящим праздником души.</p>
+  <!-- Ссылка "Назад" -->
+  <p><a href="index.html">← Назад на главную</a></p>
 
-    <hr>
-    <p><a href="index.html">← Назад на главную</a></p>
+  <!-- Текст поздравления -->
+  <p>Приближается один из любимых праздников в России — Новый год!
+  Это время волшебства, тёплых встреч, мандаринов и исполнения самых заветных желаний. В ожидании праздника так приятно заняться чем-то увлекательным и полезным — например, разгадыванием кроссвордов.</p>
+
+  <p>Для ценителей родного языка я подготовила русский кроссворд с тематическими словами: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка» и другие атрибуты новогоднего настроения. А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, подойдёт английский кроссворд, где вы встретите слова вроде snowflake, fireworks, gift и celebration.</p>
+
+  <p class="quote">Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
+
+  <!-- Ссылки на кроссворды -->
+  <h2>Кроссворды:</h2>
+  <p><a href="russian-crossword.html">Русский кроссворд</a></p>
+  <p><a href="english-crossword.html">Английский кроссворд</a></p>
+
 </body>
 </html>
