--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="UTF-8">
   <title>Поздравление!</title>
-  <!-- Подключение стилей -->
-  <link type="text/css" rel="stylesheet" href="style.css" />
+  <!-- Подключение файла стилей -->
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
