--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <p>
         Иконки: 
+        <img src="Icons/free-icon-christmas-decorations-2445049.png" alt="Новый год">
         <a href="https://www.flaticon.com/ru/free-icons/-" 
            title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
         от <a href="https://www.flaticon.com/authors/victoruler" 
