--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <p>
         Оставляю в прошлом скучную и неинтересную локальную файловую систему ради Всемирной паутины.
     </p>
-
     <p>
-        Иконки: 
-        <img src="free-icon-christmas-decorations-2445049.png" alt="Новый год"> 
-           title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
-        от <a href="https://www.flaticon.com/authors/victoruler" 
-              title="Victoruler — Flaticon">Victoruler</a> — Flaticon
+    Иконки: 
+    <a href="https://www.flaticon.com/authors/victoruler" title="Victoruler — Flaticon">
+        <img src="free-icon-christmas-decorations-2445049.png" alt="Новогодняя иконка">
+    </a>
+    от <a href="https://www.flaticon.com/authors/victoruler" title="Victoruler — Flaticon">Victoruler</a> — Flaticon
+</p>
     </p>
 </body>
 </html>
