--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
     </p>
     <p>
     Иконки: 
-    <a href="https://www.flaticon.com/authors/victoruler" title="Victoruler — Flaticon">
-        <img src="free-icon-christmas-decorations-2445049.png" alt="Новогодняя иконка">
-    </a>
-    от <a href="https://www.flaticon.com/authors/victoruler" title="Victoruler — Flaticon">Victoruler</a> — Flaticon
+    <p>
+    Иконки: 
+    <img src="free-icon-christmas-decorations-2445049.png" alt="Новый год"> 
+       title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
+    от <a href="https://www.flaticon.com/authors/victoruler  " 
+          title="Victoruler — Flaticon">Victoruler</a> — Flaticon
+</p>
 </p>
     </p>
 </body>
