--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
     Иконки: 
     <img src="free-icon-christmas-decorations-2445049.png" alt="Новый год"> 
-       title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
+      <a> title="Рождественская ёлка иконки">Рождественская ёлка иконки</a> 
     от <a href="https://www.flaticon.com/authors/victoruler  " 
           title="Victoruler — Flaticon">Victoruler</a> — Flaticon
 </p>
