--- a/index.html
+++ b/index.html
@@ -11,11 +11,31 @@
     <h2>15 декабря, 2025</h2>
     
     <p>Поздравление с Наступающим 2026 годом читайте <a href="Kolyadka.odt">здесь</a>.</p>
-    <video controls>
-  <source src="video.mp4" type="video/mp4">
-<!-- или -->
-<source src="media/newTree.mp4" type="video/mp4">
+    <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Новогодняя колядка</title>
+</head>
+<body style="text-align: center; background: #0a2; color: #ffcc00; font-family: sans-serif; padding: 20px;">
 
+  <h1>Поздравление с Рождеством</h1>
+  <h2>КОЛЯДКА</h2>
+  <p>
+    Под окном звезда горит,<br>
+    Снег на ветках серебрит.<br>
+    Пусть счастливым будет год —<br>
+    Смех, удача и доход!
+  </p>
+
+  <!-- Видео из файла newTree.mp4 -->
+  <video controls width="80%" style="border-radius: 12px; margin: 20px 0;">
+    <source src="newTree.mp4" type="video/mp4">
+    Ваш браузер не поддерживает видео.
+  </video>
+
+</body>
+</html>
         
     <h2>3 декабря, 2025</h2>
     <img src="Icons/free-icon-christmas-decorations-2445049.png" alt="Новогодние украшения">
