--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <h2>21 января, 2026</h2>
+<p>Разобралась, как работает шифрование RSA. Смотрите <a href="rsa.html">учебный пример</a>.</p>
+
     <h2>15 декабря, 2025</h2>
     <h3>Поздравление с Рождеством</h3>
     <h4>КОЛЯДКА</h4>
