--- a/rsa.html
+++ b/rsa.html
@@ -45,7 +45,7 @@
 5. Находим d: (3 × d) mod 8 = 1 → d = 3  
 
 Ключи:  
-— Открытый: (n, e) = (15, 3)  
+<p class="zz">— Открытый: (n, e) = (15, 3)  </p>
 — Закрытый: (n, d) = (15, 3)
 
 Пример:  
